# azure_ai_service

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  run.py  start_server.bat
app/: main.py  requirement.txt
app/doc_intel/: use_case.py
app/doc_intel/preprocessing/: bundle.py  doc_intel.py  figure.py  file_split.py  page_split.py
app/doc_intel/repository/: models.py
app/doc_intel/utils/: backup_utils.py  etl_pipeline.py  pdf_utils.py
app/enums/: action_enum.py  chat_role_enum.py  output_format_enum.py  prompt_enum.py  schema_enum.py  search_enum.py  system_enum.py  translation_enum.py
app/msg_format/: request_model.py  response_model.py
app/repository/: ai_search_repository.py  azure_services.py  database.py  repository.py  sys_prompt_services.py
app/repository/models/: chat_record.py  document.py
app/use_case/: ai_search_use_case.py  chat_use_case.py  file_processing.py  pdf_processing.py  prompt_use_case.py  rag_processing.py  sys_prompt.py
app/utils/: file_process.py  llm_config.py  logger.py
configuration/: config.yml
scripts/confluence_rag/wec_laptop/: basic_flow.bat
scripts/wec_laptop/: ais_create_indices.bat  ais_delete_flow.bat  ais_upload_flow.bat  backup_flow.bat  delete_flow.bat  di_flow.bat  excel_scan.bat  file_processing.bat  initialize.bat  ppt_scan.bat  word_scan.bat
src/doc2rag/: ai_search.py  backup_utils.py  bundle.py  chunking.py  comtypes_converter.py  config_utils.py  delete.py  doc_intel.py  figure.py  file_scan.py  file_split.py  initialize.py  logger_utils.py  page_split.py  pdf.py  pdf_utils.py  pure_text.py  rag.py  time_utils.py
src/doc2rag/cli/: ai_search.py  digest.py  single_rag.py  sqldb_util.py
src/doc2rag/db_utils/: database.py  models.py
src/doc2rag/pipeline/: ais_flows.py  backup_flows.py  file_flows.py
unittest/: conftest.py  test_main.py
